# Aks_ide

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  run.sh  tsconfig.json  vite.config.ts
aks_ide_client/: .gitignore  Dockerfile  components.json  next.config.ts  package.json  proxy.ts
aks_ide_client/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
aks_ide_client/components/: providers.tsx
aks_ide_client/contexts/: UserProfileContext.tsx
aks_ide_client/hooks/: ThemeProvider.tsx
aks_ide_client/public/: robots.txt
aks_ide_client/utils/: AuthProtect.tsx  Socket.ts  apiClient.ts  constant.ts  getAccessTokenFromLocalStorage.ts  useInstallationGuide.tsx  useLogout.ts  useUserProfile.ts
aks_ide_web/: .env  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
aks_ide_web/src/: App.tsx  (+2 more)
auth_service/: .env.example  .env_example  Dockerfile
backend_aks_ide/: .env_example  Dockerfile  package-lock.json  package.json
backend_ide/: Cargo.toml  Dockerfile
backend_ide/migration/src/: lib.rs  m20250502_064153_email_verification.rs  m20250502_064222_user.rs  m20250502_064239_profile.rs
backend_ide/src/: main.rs
backend_ide/src/entities/: email_verification.rs  mod.rs  profile.rs  user.rs
backend_ide/src/handleres/authenticate/: check_email.rs  create_token.rs  create_user.rs  logout.rs  mod.rs  send_token.rs  token.rs  user_profile.rs  verify_email.rs
backend_ide/src/middlewares/: guard.rs
src/: App.tsx  index.css
ws_ide/: .env.example  Cargo.toml  Dockerfile
ws_ide/src/: main.rs  state.rs  types.rs
ws_ide/src/db/: mod.rs
ws_ide/src/docker_vm/: create_container.rs  mod.rs
ws_ide/src/entities/: mod.rs  prelude.rs  profile.rs  profiles.rs  providers.rs  refresh_tokens.rs  users.rs  workspace_containers.rs  workspace_session.rs
ws_ide/src/events/: mod.rs
ws_ide/src/socket_handler/: file_events.rs  load_terminal.rs  mod.rs  pseudo_terminal.rs  repo_events.rs  start_pty_process.rs  terminal_events.rs
ws_ide/src/socket_handler/completion_events/: mod.rs
ws_ide/src/socket_handler/file_events/: get_file_data.rs  mod.rs  save_file_data.rs
ws_ide/src/socket_handler/repo_events/: mod.rs  repo_structure.rs
ws_ide/src/socket_handler/terminal_events/: close_terminal.rs  mod.rs  terminal_input.rs  terminal_resize.rs
(+179 files in other folders)
