[package]
name = "backend_ide"
version = "0.1.0"
edition = "2021"

[dependencies]
axum ="0.8.3"
headers = "0.4"
tower-cookies = "0.10"
tracing = "0.1"
# tracing-subscriber = "0.3"
tower-http = {version = "0.6.2", features = ["cors", "trace"]}
tokio = {version ="1.44.2",  features = ["macros","rt-multi-thread"]}
serde = "1.0.219"
dotenv = "0.15.0"
sea-orm = { version = "1.1.10", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
log = "0.4.27"
rand = "0.9.1"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
lettre = "0.11.15"
oauth2 = "4"
reqwest = { version = "0.11", features = ["json", "cookies", "default-tls"] }
urlencoding = "2.1.3"
chrono = "0.4.41"
bcrypt = "0.17.0"
axum-extra = {version= "0.10.1", features = ["typed-header"]}
tower = "0.5.2"
